Added implementation of GetRangeExchangeRate and GetAllExchangeRatesFromDate
